tests/rosetta/out/Pascal/chinese-remainder-theorem.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/chinese-remainder-theorem.pas
chinese-remainder-theorem.pas(22,41) Note: Call to subroutine "operator :=(const source:Variant):LongInt;" marked as inline is not inlined
chinese-remainder-theorem.pas(22,47) Note: Call to subroutine "operator :=(const source:Variant):LongInt;" marked as inline is not inlined
chinese-remainder-theorem.pas(22,47) Note: Call to subroutine "operator -(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
chinese-remainder-theorem.pas(22,47) Note: Call to subroutine "operator *(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
chinese-remainder-theorem.pas(22,57) Note: Call to subroutine "operator :=(const source:Int64):Variant;" marked as inline is not inlined
chinese-remainder-theorem.pas(22,63) Note: Call to subroutine "operator :=(const source:Variant):LongInt;" marked as inline is not inlined
chinese-remainder-theorem.pas(32,12) Note: Call to subroutine "operator =(const op1:Variant;const op2:Variant):Boolean;" marked as inline is not inlined
chinese-remainder-theorem.pas(32,12) Note: Call to subroutine "operator :=(const source:ShortInt):Variant;" marked as inline is not inlined
chinese-remainder-theorem.pas(34,6) Note: Call to subroutine "operator <(const op1:Variant;const op2:Variant):Boolean;" marked as inline is not inlined
chinese-remainder-theorem.pas(34,9) Note: Call to subroutine "operator :=(const source:ShortInt):Variant;" marked as inline is not inlined
chinese-remainder-theorem.pas(35,13) Note: Call to subroutine "operator :=(const source:Variant):LongInt;" marked as inline is not inlined
chinese-remainder-theorem.pas(53,31) Error: Identifier not found "_indexList"
chinese-remainder-theorem.pas(53,52) Fatal: Syntax error, ")" expected but "," found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
